[package]
name = "htmx_axum_askama_tailwind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.20"
color-eyre = "0.6.2"
eyre = "0.6.8"
serde = "1.0.183"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.37"
